--- a/template/chat.html
+++ b/template/chat.html
@@ -36,7 +36,7 @@
 						<input id="message-input" type="text" class="form-control"></input>
 						<span class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-12"
 							style="margin-top: 10px">
-							<button class="btn btn-warning btn-lg btn-block" id="btn-chat">Send</button>
+							<button class="btn btn-warning btn-lg btn-block" id="btn-chat">Leave Room</button>
 						</span>
 					</div>
 				</div>
